# cssw

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
cssw/: __init__.py  food.py  nutriment.py  sheet.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
