[tool.poetry]
name = "cssw"
version = "0.1.0"
description = "A wrapper to use the spread sheet of Dr. Jean-Michel Cohen concerning nutrition nutriments quantity per food family."
authors = ["Rached Mejri <r.mejri74100@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
xlutils = "^2.0.0"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
